# solana-accountsdb-plugin-redis

./: Cargo.toml  README.md  example_config.json
src/: client.rs  config.rs  lib.rs  plugin.rs
